# dppeeper

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
example/: GAL16V8.toml  PAL10x8.toml  PAL16L8.toml  PAL16R4.toml  PAL16R6.toml  PAL20L8.toml
example_definitions/: PAL16L8.toml
examples/: GAL22V10_PLCC.toml  P5C060.toml
src/: dppeeper.py
src/dppeeper/: __init__.py  frontend.py  peeper_utilities.py
src/dppeeper/ic/: ic_definition.py  ic_loader.py  ic_package_types.py  package_types.py
src/dppeeper/ui/: main_window.py  ui_utilities.py
src/ui/: ui_utilities.py
tests/: conftest.py  test_ic_definition.py  test_ui_utilities.py
